@@ -9,6 +9,9 @@
 
     "use 5.006001" in Makefile.PL and Build.PL.
 
+    Fixed RT #72022. Uses of labels in next(), last() or redo() are no
+    longer seen by ProhibitCallsToUndeclaredSubs.
+
     Fixed RT #66863. Test::Deep not needed for testing.
 
     Fixed RT #62184. All subroutines imported in a quoted but
